# signum

./: .gitignore  README.md  TODO.txt  icons.txt  justfile  main.py  pyproject.toml  requirements.txt  tmp
example/: icons.txt
src/: main.py
src/signum/: main.py
test/: icons.txt
